@startuml
' Database schema
entity users {
  *id UUID
  email
}
entity accounts {
  *id UUID
  user_id UUID
}
note right of accounts
  accounts_user_id_idx (user_id)
end note
entity currencies {
  *code VARCHAR(3)
  name
  symbol
  precision
}
entity categories {
  *id UUID
  parent_id UUID
  account_id UUID
  user_id UUID
}
note right of categories
  categories_user_id_idx (user_id)
end note
entity transactions {
  *id UUID
  user_id UUID
  category_id UUID
  posted_at
  payee
  note
  external_id
}
note right of transactions
  transactions_user_posted_idx (user_id, posted_at)
end note
entity postings {
  *id UUID
  transaction_id UUID
  account_id UUID
}
note right of postings
  postings_txn_id_idx (transaction_id)
end note
entity goals {
  *id UUID
  account_id UUID
  user_id UUID
}
entity recurring_payments {
  *id UUID
  category_id UUID
  account_id UUID
  user_id UUID
}
entity bank_tokens {
  *id UUID
  account_id UUID
  user_id UUID
}
entity push_subscriptions {
  *id UUID
  account_id UUID
  user_id UUID
}

users ||--o{ accounts
users ||--o{ categories
users ||--o{ transactions
users ||--o{ goals
users ||--o{ recurring_payments
users ||--o{ bank_tokens
users ||--o{ push_subscriptions
accounts ||--o{ categories
accounts ||--o{ goals
accounts ||--o{ recurring_payments
accounts ||--o{ bank_tokens
accounts ||--o{ push_subscriptions
accounts ||--o{ postings
currencies ||--o{ accounts
currencies ||--o{ postings
categories ||--o{ transactions
categories ||--o{ recurring_payments
categories ||--o{ categories : parent
transactions ||--o{ postings
@enduml
